# vkontakte-bot

./: Cargo.toml  README.md
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/using_regex/: Cargo.toml
examples/using_regex/src/: main.rs
src/: alias.rs  consts.rs  error.rs  lib.rs  result.rs
src/api/: message.rs  mod.rs
src/event/: message.rs  mod.rs  type_event.rs
src/vkbot/: command.rs  context.rs  long_poll_server.rs  mod.rs
