[package]
name = "vkontakte-bot"
version = "0.0.1"
edition = "2021"
authors = ["Dmitriy Mayorov<MayorDi@yandex.ru>"]
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.68.0"
repository = ""
homepage = ""

[dependencies]
reqwest = { version = "*", features = ["blocking"] }
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.0"
