[package]
name = "vkontakte-bot"
description = "Library for creating bots for the VK social network."
version = "0.0.2"
edition = "2021"
authors = ["Dmitriy Mayorov<MayorDi@yandex.ru>"]
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.68.0"
keywords = ["VKontakte", "api", "vk", "chat"]
categories = ["api-bindings "]
repository = "https://github.com/MayorDi/vkontakte-bot"
homepage = "https://github.com/MayorDi/vkontakte-bot"

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.0"
regex = "1.10.5"

[workspace]
members = ["examples/using_regex", "examples/basic"]